--- a/src/Layout/Navbar.css
+++ b/src/Layout/Navbar.css
@@ -8,11 +8,12 @@
     align-items: center;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
+    /* overflow: hidden; */
     right: 0;
     z-index: 1000;
-    width: 1536px;
+    width: 1519px;
     margin: 0;
 }
 
