--- a/src/Layout/Navbar.css
+++ b/src/Layout/Navbar.css
@@ -1,7 +1,9 @@
 /* Basic navbar styling */
 .navbar {
   background-color: white;
-  color: #007bff;
+  /* color: #007bff; */
+  color: #1e5a84;
+
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -13,7 +15,7 @@
   /* overflow: hidden; */
   right: 0;
   z-index: 1000;
-  width: 1519px;
+  width: 1700px;
   margin: 0;
 }
 
@@ -22,6 +24,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-left: 10px;
+  
 }
 
 /* Navbar links container */
@@ -34,14 +37,35 @@
 /* Navbar link styling */
 .navbar-links li a {
   text-decoration: none;
-  color: #007bff;
+  /* color: #007bff; */
+  color: #1e5a84;
+
   font-weight: 500;
-  padding: 10px;
+  padding: 14px;
 }
 
 /* Navbar link hover effect */
 .navbar-links li a:hover {
   color: #0056b3;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 150%;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  z-index: 1000;
+  
+  
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
 }
 
 /* Mobile responsiveness */
