--- a/src/components/Login-Signup/LoginForm.css
+++ b/src/components/Login-Signup/LoginForm.css
@@ -1,6 +1,8 @@
 /* General styling for the login container */
 .login-container {
-    background-color: white;
+    background-image: linear-gradient(180deg, #6c91c9, #e3f2fd);
+
+    /* background-color: white; */
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
@@ -17,7 +19,9 @@
 
 /* Form title styling */
 .login-form .form-title {
-    color: #007bff;
+    /* color: #007bff; */
+    color: #1e5a84;
+
     text-align: center;
     margin-bottom: 25px;
     font-size: 2rem;
@@ -32,7 +36,9 @@
 
 .form-group label {
     font-weight: 600;
-    color: #0056b3;
+    /* color: #0056b3; */
+    color: #1e5a84;
+
     font-size: 1.1rem;
     display: inline-block;
     margin-bottom: 5px;
@@ -48,14 +54,14 @@
 }
 
 .form-control:focus {
-    border-color: #007bff;
+    border-color:  #1e5a84;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
     outline: none;
 }
 
 /* Button styling */
 .btn {
-    background-color: #007bff;
+    background-color:  #1e5a84;
     color: white;
     border-radius: 10px;
     padding: 12px 20px;
@@ -67,7 +73,7 @@
 }
 
 .btn:hover {
-    background-color: #0056b3;
+    background-color:  #1e5a84;
     transform: translateY(-3px);
 }
 
@@ -79,7 +85,9 @@
 }
 
 .signup-link a {
-    color: #007bff;
+    /* color: #007bff; */
+    color: #1e5a84;
+
     text-decoration: none;
 }
 
@@ -98,12 +106,16 @@
     right: 10px;
     transform: translateY(-50%);
     cursor: pointer;
-    color: #007bff;
+    /* color: #007bff; */
+    color: #1e5a84;
+
     font-size: 1.2rem;
 }
 
 .password-toggle:hover {
-    color: #0056b3;
+    /* color: #0056b3; */
+    color: #1e5a84;
+
 }
 
 /* Media queries for responsiveness */
