--- a/src/components/Login-Signup/SignupForm.css
+++ b/src/components/Login-Signup/SignupForm.css
@@ -4,12 +4,16 @@ body {
     align-items: center;
     min-height: 100vh;
     margin: 0;
-    background-color: #f0f2f5;
+    /* background-color: #f0f2f5; */
+    background-image: linear-gradient(180deg, #6c91c9, #e3f2fd);
+
     font-family: 'Arial', sans-serif;
 }
 
 .signup-container {
-    background-color: white;
+    /* background-color: white; */
+    background-image: linear-gradient(180deg, #6c91c9, #e3f2fd);
+
     padding: 30px;
     border-radius: 20px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
@@ -25,7 +29,9 @@ body {
 }
 
 .signup-form .form-title {
-    color: #007bff;
+    /* color: #007bff; */
+    color: #1e5a84;
+
     text-align: center;
     margin-bottom: 25px;
     font-size: 2rem;
@@ -39,7 +45,9 @@ body {
 
 .form-group label {
     font-weight: 600;
-    color: #0056b3;
+    color: #1e5a84;
+
+    /* color: #0056b3; */
     font-size: 1.1rem;
     display: inline-block;
     margin-bottom: 5px;
@@ -55,7 +63,7 @@ body {
 }
 
 .form-control:focus {
-    border-color: #007bff;
+    border-color:  #1e5a84;
     box-shadow: 0 0 8px rgba(0, 123, 255, 0.5);
     outline: none;
 }
@@ -70,16 +78,20 @@ body {
     right: 10px;
     transform: translateY(-50%);
     cursor: pointer;
-    color: #007bff;
+    /* color: #007bff; */
+    color: #1e5a84;
+
     font-size: 1.2rem;
 }
 
 .password-toggle:hover {
-    color: #0056b3;
+    /* color: #0056b3; */
+    color: #1e5a84;
+
 }
 
 .btn {
-    background-color: #007bff;
+    background-color:  #1e5a84;
     color: white;
     border-radius: 10px;
     padding: 12px 20px;
@@ -102,7 +114,9 @@ body {
 }
 
 .login-link a {
-    color: #007bff;
+    color: #1e5a84;
+
+    /* color: #007bff; */
     text-decoration: none;
 }
 
