--- a/src/Layout/Navbar.css
+++ b/src/Layout/Navbar.css
@@ -1,9 +1,7 @@
 /* Basic navbar styling */
 .navbar {
   background-color: white;
-  /* color: #007bff; */
-  color: #1e5a84;
-
+  color: #007bff;
   padding: 10px;
   display: flex;
   justify-content: space-between;
@@ -24,7 +22,6 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-left: 10px;
-  
 }
 
 /* Navbar links container */
@@ -37,35 +34,14 @@
 /* Navbar link styling */
 .navbar-links li a {
   text-decoration: none;
-  /* color: #007bff; */
-  color: #1e5a84;
-
+  color: #007bff;
   font-weight: 500;
-  padding: 14px;
+  padding: 10px;
 }
 
 /* Navbar link hover effect */
 .navbar-links li a:hover {
   color: #0056b3;
-}
-
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 150%;
-  left: 0;
-  background-color: white;
-  border: 1px solid #ccc;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  z-index: 1000;
-  
-  
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
 }
 
 /* Mobile responsiveness */
