--- a/src/Layout/Layout.css
+++ b/src/Layout/Layout.css
@@ -1,7 +1,10 @@
+ 
+
 .layout-container {
     display: flex;
     flex-direction: column;
     height: 100vh;
+
 }
 
 .content {
@@ -12,11 +15,12 @@
 }
 
 .main-content {
-    background-image: linear-gradient(180deg, #6c91c9, #e3f2fd);
-
+    /* background-image: linear-gradient(180deg, #6c91c9, #e3f2fd); */
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
     /* background-color: #f8f9fa; */
     /* Light gray background */
-    padding: 20px;
+    /* padding: 20px; */
     flex: 1;
     overflow-y: auto;
+
 }
