doctor code update

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -129,16 +129,17 @@
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    width: 30%;
+    width: 28%;
     /* Adjust this value to control card width */
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     /* transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease, background 0.3s ease; */
     opacity: 0.9;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin: 30px;
 }
 
 .card:hover {
@@ -153,9 +154,9 @@
 
 /* Card Image */
 .card img {
-    width: 60%;
+    width: 30%;
     /* Image takes 70% width of the card */
-    height: 300px;
+    height: 200px;
     /* Fixed height */
     object-fit: cover;
     border-radius: 10px;
