--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -374,11 +374,13 @@
     border-radius: 8px;
     transition: border 0.3s ease, box-shadow 0.3s ease;
     outline: none;
+    background-color: white;
+    color: #000;
 }
 
 .form-input:focus {
-    border: 2px solid #4CAF50;
-    box-shadow: 0px 0px 8px rgba(76, 175, 80, 0.6);
+    border: 2px solid #1d3fa4;
+    box-shadow: 0px 0px 8px rgba(49, 107, 207, 0.6);
 }
 
 textarea.form-input {
