--- a/src/components/Manage-Account/Doctor-manage/DoctorManage.css
+++ b/src/components/Manage-Account/Doctor-manage/DoctorManage.css
@@ -15,7 +15,7 @@
 }
 
 .add-doctor-btn:hover {
-    background-color:  #37474f;
+    background-color: #37474f;
 }
 
 /* General container styles */
@@ -66,3 +66,4 @@
 
 
 
+/* --------------------------------- */
