--- a/src/Layout/Footer.css
+++ b/src/Layout/Footer.css
@@ -1,6 +1,6 @@
 /* Footer Styling */
 .footer {
-    background-color: #37474f;
+    background-color: #59666c;
     /* Dark background color */
     color: #ffffff;
     /* White text color */
@@ -13,7 +13,11 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 30px;
+    gap: 10px;
+    height: 200px;
+    margin-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .footer-logo {
@@ -23,20 +27,22 @@
 
 .footer-logo img {
     width: 100%;
-    max-width: 150px;
-    margin-bottom: 15px;
+    max-width: 180px;
+    margin-left: 60px;
 }
 
 .footer-logo p {
     font-size: 1.2rem;
     font-weight: bold;
     color: #f0f0f0;
+    margin-left: 26px;
 }
 
 .footer-links,
 .footer-contact {
     flex: 1;
-    max-width: 300px;
+    max-width: 220px;
+    
 }
 
 .footer-links h4,
@@ -48,11 +54,11 @@
 
 .footer-links ul {
     list-style: none;
-    padding: 0;
+    padding: 10;
 }
 
 .footer-links li {
-    margin: 10px 0;
+    margin: 8px 0;
 }
 
 .footer-links a,
@@ -60,6 +66,9 @@
     color: #ffffff;
     text-decoration: none;
     font-size: 1rem;
+    
+    
+
 }
 
 .footer-links a:hover,
@@ -79,7 +88,7 @@
 .social-media a {
     color: #ffffff;
     text-decoration: none;
-    margin-right: 15px;
+    margin-right: 1px;
 }
 
 .social-media a:hover {
@@ -90,6 +99,7 @@
     text-align: center;
     margin-top: 30px;
     font-size: 1rem;
+    margin-bottom: -10px;
 }
 
 /* Mobile Responsive */
