--- a/src/components/Manage-Account/Patient-manage/PatientManage.css
+++ b/src/components/Manage-Account/Patient-manage/PatientManage.css
@@ -5,7 +5,7 @@
   right: 20px;
   padding: 10px 20px;
   /* background-color: #37474f; */
-  background-color:   #024d82;
+  background-color: #024d82;
 
   color: white;
   border: none;
@@ -18,7 +18,7 @@
 .add-patient-btn:hover {
   /* background-color: #0096FF; */
   /* background-color: #1a237e; */
-  background-color:   #0e6aab;
+  background-color: #0e6aab;
   color: #000;
 
 }
@@ -52,7 +52,7 @@
 
 .patients-table th {
   /* background-color: #0096FF; */
-  background-color:   #024d82;
+  background-color: #024d82;
 
   color: white;
   font-weight: bold;
@@ -70,7 +70,7 @@
   margin-left: 28px;
   border-radius: 50%;
   object-fit: cover;
-  border: 2px solid  #024d82;
+  border: 2px solid #024d82;
 }
 
 /* --------------------------------------------------------------- */
@@ -78,4 +78,49 @@
 .custom-modal .modal-dialog {
   max-width: 50%;
   margin: 120px auto;
+}
+
+
+/* PatientManage.css */
+
+/* Container for the search bar */
+.search-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+/* Style for the search input */
+.search-input {
+  width: 250px;
+  padding: 8px 12px;
+  font-size: 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  margin-right: 10px;
+  transition: border-color 0.3s;
+}
+
+/* Focus state for the search input */
+.search-input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+/* Style for the search button */
+.search-button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+/* Hover effect for the search button */
+.search-button:hover {
+  background-color: #0056b3;
 }
